--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -9,9 +9,9 @@ body {
     padding: 0;
     margin: 0;
     height:100vh;
-    background-color: #000000;
     font-family: Verdana;
     overflow-x: hidden;
+    background-color: $sand;
 }
 
 * {
@@ -25,7 +25,7 @@ body {
 } 
 
 
-.view-container {
+.section {
     display: flex;
     min-height: 100vh;
     width: 100vw;
