--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,3 +2,18 @@ $white: #FFFFFF;
 $sand: #ECEEEF;
 $dark-gray: #343a40;
 $blue: #0085a1;
+
+// Variables
+$bg-body: #f9f9f9;
+
+$primary-color: $blue;
+$secondary-color: $blue;
+
+
+// Typography
+$base-font: helvetica, arial, tahoma, verdana;
+$base-font-title: "Dosis", arial, tahoma, verdana;
+
+$base-font-color: #726f77;
+
+$side-margin:20px;
