--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,5 +1,7 @@
 
 
+
+
 @font-face {
     font-family: Verdana;
     src: url('~@/assets/fonts/Verdana.ttf');
@@ -19,6 +21,30 @@ body {
     user-select: none !important;
 }
 
+
+body, html {
+	height: 100%;
+}
+body {
+	background: $bg-body;
+	background-size: cover;
+	margin: 0;
+	padding: 0;
+	font-family: $base-font;
+	line-height: 20px;
+	font-size: 14px;
+    color: $base-font-color;
+    
+}
+
+.container {
+	max-width: 1100px;
+    margin: 0 auto;
+}
+
+.content{
+    margin: $side-margin $side-margin;
+}
 *::selection 
 {
     background-color:transparent;
@@ -26,11 +52,13 @@ body {
 
 
 .section {
-    display: flex;
     min-height: 100vh;
-    width: 100vw;
+    width:100%;
+    margin: 0 auto;
 }
-
+.section:nth-child(odd) {
+    background-color: $blue;
+}
 
 .uppercase{
     text-transform: uppercase;
