--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,7 +1,3 @@
-
-
-
-
 @font-face {
     font-family: Verdana;
     src: url('~@/assets/fonts/Verdana.ttf');
@@ -10,10 +6,12 @@
 body {
     padding: 0;
     margin: 0;
-    height:100vh;
+    height: 100vh;
     font-family: Verdana;
     overflow-x: hidden;
     background-color: $sand;
+    position: relative;
+    z-index: -5;
 }
 
 * {
@@ -21,45 +19,52 @@ body {
     user-select: none !important;
 }
 
-
-body, html {
-	height: 100%;
+body,
+html {
+    height: 100%;
+    scroll-behavior: smooth;
 }
 body {
-	background: $bg-body;
-	background-size: cover;
-	margin: 0;
-	padding: 0;
-	font-family: $base-font;
-	line-height: 20px;
-	font-size: 14px;
+    background: $bg-body;
+    background-size: cover;
+    margin: 0;
+    padding: 0;
+    font-family: $base-font;
+    line-height: 20px;
+    font-size: 14px;
     color: $base-font-color;
-    
 }
 
 .container {
-	max-width: 1100px;
+    max-width: 1100px;
     margin: 0 auto;
 }
 
-.content{
+.content {
     margin: $side-margin $side-margin;
 }
-*::selection 
-{
-    background-color:transparent;
-} 
-
+*::selection {
+    background-color: transparent;
+}
 
 .section {
     min-height: 100vh;
-    width:100%;
+    width: 100%;
     margin: 0 auto;
+    position: relative;
+    z-index: -5;
+    .title {
+        font-size: 46px;
+        color: $blue;
+    }
 }
 .section:nth-child(odd) {
     background-color: $blue;
+    .title {
+        color: #ffffff;
+    }
 }
 
-.uppercase{
+.uppercase {
     text-transform: uppercase;
 }
