--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -3,28 +3,23 @@
     src: url('~@/assets/fonts/Verdana.ttf');
 }
 
-body {
-    padding: 0;
-    margin: 0;
-    height: 100vh;
-    font-family: Verdana;
-    overflow-x: hidden;
-    background-color: $sand;
-    position: relative;
-    z-index: -5;
-}
-
-* {
-    box-sizing: border-box;
-    user-select: none !important;
+html {
+    //overflow: auto;
 }
 
 body,
 html {
-    height: 100%;
+    height: auto;
     scroll-behavior: smooth;
 }
 body {
+    padding: 0;
+    margin: 0;
+    font-family: Verdana;
+    //overflow-x: hidden;
+    background-color: $sand;
+    position: relative;
+    z-index: -5;
     background: $bg-body;
     background-size: cover;
     margin: 0;
@@ -33,6 +28,11 @@ body {
     line-height: 20px;
     font-size: 14px;
     color: $base-font-color;
+}
+
+* {
+    box-sizing: border-box;
+    user-select: none !important;
 }
 
 .container {
@@ -49,10 +49,11 @@ body {
 
 .section {
     min-height: 100vh;
-    width: 100%;
+    width: 100vw;
     margin: 0 auto;
     position: relative;
     z-index: -5;
+
     .title {
         font-size: 46px;
         color: $blue;
