--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,26 +4,25 @@
 }
 
 html {
-    //overflow: auto;
+    overflow-x: hidden;
+    overflow-y: scroll;
 }
 
 body,
 html {
-    height: auto;
-    scroll-behavior: smooth;
+    height: 100%;
+    width: 100vw;
+    //scroll-behavior: smooth;
 }
 body {
     padding: 0;
     margin: 0;
     font-family: Verdana;
-    //overflow-x: hidden;
     background-color: $sand;
     position: relative;
     z-index: -5;
     background: $bg-body;
     background-size: cover;
-    margin: 0;
-    padding: 0;
     font-family: $base-font;
     line-height: 20px;
     font-size: 14px;
