--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -12,7 +12,6 @@ body,
 html {
     height: 100%;
     width: 100vw;
-    //scroll-behavior: smooth;
 }
 body {
     padding: 0;
@@ -47,6 +46,7 @@ body {
 }
 
 .section {
+    padding-top: 60px;
     min-height: 100vh;
     width: 100vw;
     margin: 0 auto;
