--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,7 +11,7 @@ html {
 body,
 html {
     height: 100%;
-    width: 100vw;
+    width: 100%;
 }
 body {
     padding: 0;
@@ -40,28 +40,37 @@ body {
 
 .content {
     margin: $side-margin $side-margin;
+    position: relative;
+    z-index: 50;
 }
+
 *::selection {
     background-color: transparent;
 }
 
 .section {
-    padding-top: 60px;
     min-height: 100vh;
-    width: 100vw;
-    margin: 0 auto;
+    width: 100%;
+    margin: 0;
+    padding-top: 60px;
+    padding-right: 15px;
+    padding-left: 0px;
+    padding-bottom: 20px;
     position: relative;
-    z-index: -5;
+    z-index: 50;
 
     .title {
-        font-size: 46px;
-        color: $blue;
+        font-size: 40px;
+        margin-bottom: 40px;
+        color: $white;
     }
 }
-.section:nth-child(odd) {
-    background-color: $blue;
+.section:nth-child(even) {
+    position: relative;
+    background-color: $white;
     .title {
-        color: #ffffff;
+        z-index: 50;
+        color: $primary-color;
     }
 }
 
