--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -42,7 +42,7 @@ body {
     //margin: $side-margin $side-margin;
     margin: 0px auto;
     position: relative;
-    z-index: 50;
+    //z-index: 50;
     max-width: 1100px;
 }
 
@@ -77,4 +77,8 @@ body {
 
 .uppercase {
     text-transform: uppercase;
+}
+
+.hand:hover {
+    cursor: pointer;
 }
